--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "GradShow project website. Showcases projects developed by Diploma of Information Technology students.",
   "devDependencies": {
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
